<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/timeSettings">
        <com.voidgreen.eyesrelax.preferences.NumberPickerRelaxPreference
            android:defaultValue="5"
            android:key="@string/pref_key_relax_period"
            android:summary="Break time"
            android:title="@string/pref_title_relax_period" />
        <com.voidgreen.eyesrelax.preferences.NumberPickerWorkPreference
            alphaSlider="true"
            android:defaultValue="2"
            android:key="@string/pref_key_work_period"
            android:summary="Work time"
            android:title="@string/pref_title_work_period" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_30s_notification"
            android:title="@string/pref_title_30s_notification" />
        />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/alarmSettings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_vibration"
            android:title="@string/pref_title_vibration" />
        />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_sound"
            android:title="@string/pref_title_sound" />
        />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/otherSettings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_start_on_boot"
            android:title="@string/pref_title_start_on_boot" />
        />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_pc_mode"
            android:title="@string/pref_title_pc_mode" />
        />
    </PreferenceCategory>
</PreferenceScreen>